--- a/index.html
+++ b/index.html
@@ -13,34 +13,34 @@
     <header>
 
         <!-- Barra de navegação -->
-        <nav class="navbar">
-            <ul class="nav-menu">
-                <li class="nav-item">
-                    <a href="#top" class="nav-link">
+        <nav id="navbar">
+            <ul>
+                <li>
+                    <a href="#top">
                         Home
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a href="#content" class="nav-link">
+                <li>
+                    <a href="#content">
                         Skills
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a href=".projects" class="nav-link">
+                <li>
+                    <a href="#projects">
                         Projects
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a href="#about" class="nav-link">
+                <li>
+                    <a href="#about">
                         About
                     </a>
                 </li>
             </ul>
 
             <ul class="contacts-icon">
-                <li><img src="" alt="E-mail"></li>
-                <li><img src="" alt="LinkedIn"></li>
-                <li><img src="" alt="Twitter"></li>
+                <li><a href=""><img src="/assets/email.png" alt="E-mail"></a></li>
+                <li><a href=""><img src="/assets/linkedin.png" alt="LinkedIn"></a></li>
+                <li><a href=""><img src="/assets/twitter.png" alt="Twitter"></a></li>
             </ul>
 
             <div class="hamburger">
@@ -51,32 +51,28 @@
         </nav>
     </header>
 
-</body>
+    <section id="home">
 
-<section id="home">
-
-    <div id="hero">
-        <div id="name-hero">
-            <h1>Willian Metzger</h1>
-            <h2>I'm a <span id="text-highlight">game designer</span> based in Brazil</h2>
+        <div id="hero">
+            <div id="name-hero">
+                <h1>Willian Metzger</h1>
+                <p>I'm a <span id="text-highlight">game designer</span> based in Brazil</p>
+            </div>
+            <img src="/assets/hero-character.png" alt="Willian Metzger picture">
         </div>
-        <img src="" alt="Willian Metzger picture">
-    </div>
-</section>
+    </section>
 
-<section id="content">
+    <section id="content">
 
-    <div id="content-background">
-
-        <div #skils-icons>
+        <div id="skill-icons-container">
             <ul>
-                <li><img src="" alt="Unreal Engine"></li>
-                <li><img src="" alt="Unity"></li>
-                <li><img src="" alt="Godot"></li>
-                <li><img src="" alt="C++"></li>
-                <li><img src="" alt="C#"></li>
-                <li><img src="" alt="Python"></li>
-                <li><img src="" alt="JavaScript"></li>
+                <li class="skill-icons"><img src="/assets/unreal.png" alt="Unreal Engine"></li>
+                <li class="skill-icons"><img src="/assets/unity.jpg" alt="Unity"></li>
+                <li class="skill-icons"><img src="/assets/godot.png" alt="Godot"></li>
+                <li class="skill-icons"><img src="/assets/c++.png" alt="C++"></li>
+                <li class="skill-icons"><img src="/assets/csharp.png" alt="C#"></li>
+                <li class="skill-icons"><img src="/assets/python.png" alt="Python"></li>
+                <li class="skill-icons"><img src="/assets/javascript.png" alt="JavaScript"></li>
             </ul>
         </div>
 
@@ -101,79 +97,111 @@
         <div id="skills">
             <h3>Main Skills</h3>
             <ul>
-                <p><img src="" alt="Lamp inside a head silhouette"> Core Skills</p>
+                <p><img src="/assets/brain.png" alt="Lamp inside a head silhouette"><span id="text-highlight"> Core
+                        Skills</span></p>
                 <li>Workgroup</li>
                 <li>Project Management</li>
                 <li>Building projects from scratch</li>
                 <li>Building projects from templates and upgrading existing projects</li>
-                <p><img src="" alt="Code tag inside a computer screen"> Coding Skills</p>
+                <p><img src="/assets/code.png" alt="Code tag inside a computer screen"><span id="text-highlight"> Coding
+                        Skills</span></p>
                 <li>Experienced with Data Structures</li>
                 <li>Pathfinding</li>
                 <li>Machine States</li>
                 <li>Shader Programming</li>
                 <li>Animation handling</li>
-                <p><img src="" alt="Lamp on"> Illumination Skills</p>
+                <p><img src="/assets/lamp.png" alt="Lamp on"><span id="text-highlight"> Illumination Skills</span></p>
                 <li>Lumen and Static lighting building</li>
             </ul>
         </div>
 
-        <div class="projects">
-            <div class="project-title">
-                <h3>Professional projects</h3>
-                <p>Full portfolio <img src="" alt="Square with arrow pointing up diagonally"></p>
+        <section id="projects">
+
+            <div class="projects">
+                <div class="project-title">
+                    <h3>Professional projects</h3>
+                    <p><a href="">Full portfolio <img src="/assets/link.png"
+                                alt="Square with arrow pointing up diagonally"></a></p>
+                </div>
+                <div class="project-content">
+                    <video controls="controls" muted="muted" poster="/assets/video1poster.png" height="636px"
+                        src="/assets/video1.mp4"></video>
+                    <video controls="controls" muted="muted" poster="/assets/video2poster.png" height="636px"
+                        src="/assets/video2.mp4"></video>
+                    <video controls="controls" muted="muted" poster="/assets/video1poster.png" height="636px"
+                        src="/assets/video1.mp4"></video>
+                    <video controls="controls" muted="muted" poster="/assets/video2poster.png" height="636px"
+                        src="/assets/video2.mp4"></video>
+                    <video controls="controls" muted="muted" poster="/assets/video1poster.png" height="636px"
+                        src="/assets/video1.mp4"></video>
+                    <video controls="controls" muted="muted" poster="/assets/video2poster.png" height="636px"
+                        src="/assets/video2.mp4"></video>
+                </div>
+                <div class="project-text">
+                    <h4>Lorem ipsum</h4>
+                    <p>Lorem ipsum dolor sit amet. Eos dolorem natus ex laboriosam asperiores aut ullam consequatur cum
+                        dolor nemo nam veritatis amet At pariatur fugiat eum totam voluptates!</p>
+                </div>
             </div>
-            <div class="project-content">
-                <video controls="controls" src=""></video>
+
+            <div class="projects">
+                <div class="project-title">
+                    <h3>Personal projects</h3>
+                    <p><a href="">Full portfolio <img src="/assets/link.png"
+                                alt="Square with arrow pointing up diagonally"></a></p>
+                </div>
+                <div class="project-content">
+                    <video controls="controls" muted="muted" poster="/assets/video2poster.png" height="636px"
+                        src="/assets/video2.mp4"></video>
+                    <video controls="controls" muted="muted" poster="/assets/video1poster.png" height="636px"
+                        src="/assets/video1.mp4"></video>
+                    <video controls="controls" muted="muted" poster="/assets/video2poster.png" height="636px"
+                        src="/assets/video2.mp4"></video>
+                    <video controls="controls" muted="muted" poster="/assets/video1poster.png" height="636px"
+                        src="/assets/video1.mp4"></video>
+                    <video controls="controls" muted="muted" poster="/assets/video2poster.png" height="636px"
+                        src="/assets/video2.mp4"></video>
+                    <video controls="controls" muted="muted" poster="/assets/video1poster.png" height="636px"
+                        src="/assets/video1.mp4"></video>
+                </div>
+                <div class="project-text">
+                    <h4>Lorem ipsum</h4>
+                    <p>Lorem ipsum dolor sit amet. Eos dolorem natus ex laboriosam asperiores aut ullam consequatur
+                        cum
+                        dolor nemo nam veritatis amet At pariatur fugiat eum totam voluptates!</p>
+                </div>
             </div>
-            <div class="project-text">
-                <h4>Lorem ipsum</h4>
-                <p>Lorem ipsum dolor sit amet. Eos dolorem natus ex laboriosam asperiores aut ullam consequatur cum
-                    dolor nemo nam veritatis amet At pariatur fugiat eum totam voluptates!</p>
+        </section>
+    </section>
+
+    <section id="about">
+        <div id="about-text">
+            <div id="about-title">
+                <h2>About me</h2>
+                <p><a href="">Résumé <img src="/assets/link.png" alt="Square with arrow pointing up diagonally"></a></p>
+            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis
+                condimentum.
+                Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames
+                ac
+                turpis egestas.
+                Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut
+                adipiscing.</p>
+            <div id="location-experience">
+                <p><img src="/assets/gps.png" alt="Gps pin"> Brazil</p>
+                <p><img src="/assets/code2.png" alt="Diagonal slash inside a coding tag"> 4yrs of experience</p>
             </div>
         </div>
+        <img src="/assets/About-character.png" alt="Willian Metzger picture">
 
-        <div class="projects">
-            <div class="project-title">
-                <h3>Personal projects</h3>
-                <p>Full portfolio <img src="" alt="Square with arrow pointing up diagonally"></p>
-            </div>
-            <div class="project-content">
-                <video controls="controls" src=""></video>
-            </div>
-            <div class="project-text">
-                <h4>Lorem ipsum</h4>
-                <p>Lorem ipsum dolor sit amet. Eos dolorem natus ex laboriosam asperiores aut ullam consequatur cum
-                    dolor nemo nam veritatis amet At pariatur fugiat eum totam voluptates!</p>
-            </div>
-        </div>
-</section>
-
-<section id="about">
-    <div id="about-text">
-        <div id="about-title">
-            <h2>About me</h2>
-            <p>Résumé <img src="" alt="Square with arrow pointing up diagonally"></p>
-        </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum.
-            Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
-            turpis egestas.
-            Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut
-            adipiscing.</p>
-        <div id="location-experience">
-            <p><img src="" alt="Gps pin"> Brazil</p>
-            <p><img src="" alt="Diagonal slash inside a coding tag"> 4yrs of experience</p>
-        </div>
-    </div>
-    <img src="" alt="Willian Metzger picture">
-</section>
-
-<footer>
-    <h4>Tell me about your next project!</h4>
-    <ul>
-        <li><a href=""></a><img src="" alt="E-mail"></li>
-        <li><a href=""></a><img src="" alt="LinkedIn"></li>
-        <li><a href=""></a><img src="" alt="Twitter"></li>
-    </ul>
-</footer>
-
+        <footer>
+            <h4>Tell me about your next project!</h4>
+            <ul>
+                <li><a href=""></a><img src="" alt="E-mail"></li>
+                <li><a href=""></a><img src="" alt="LinkedIn"></li>
+                <li><a href=""></a><img src="" alt="Twitter"></li>
+            </ul>
+        </footer>
+    </section>
+</body>
 </html>
