Remoção de itens desnecessários e atualizações gerais

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                         About
                     </a>
                 </li>
+
+                <!-- Seleção de idioma -->
                 <div class="language">
                     <div class="language-selected">
                         <img src="/assets/mundo.png" alt="Ícone do globo terrestre.">
@@ -47,22 +49,28 @@
                 </div>
             </ul>
 
+            <!-- Menu de hamburger -->
             <div class="hamburger">
                 <span class="bar"></span>
                 <span class="bar"></span>
                 <span class="bar"></span>
             </div>
 
+            <!-- Links de contato -->
             <ul class="contacts-icon">
-                <li><a href=""><img src="/assets/email.png" alt="E-mail"></a></li>
-                <li><a href=""><img src="/assets/linkedin.png" alt="LinkedIn"></a></li>
-                <li><a href=""><img src="/assets/twitter.png" alt="Twitter"></a></li>
+                <li><a href="mailto:willianmetzger@gmail.com" target="_blank"><img src="/assets/email.png"
+                            alt="E-mail"></a></li>
+                <li><a href="https://www.linkedin.com/in/willian-brasil-metzger-46b9a8170/" target="_blank"><img
+                            src="/assets/linkedin.png" alt="LinkedIn"></a></li>
+                <li><a href="https://twitter.com/Willian_Metzger" target="_blank"><img src="/assets/twitter.png"
+                            alt="Twitter"></a></li>
             </ul>
         </nav>
     </header>
 
     <section id="home">
 
+        <!-- Hero com nome e foto -->
         <div id="hero">
             <div id="name-hero">
                 <h1>Willian Metzger</h1>
@@ -74,6 +82,7 @@
 
     <section id="content">
 
+        <!-- Ícones skills -->
         <div id="skill-icons-container">
             <ul>
                 <li class="skill-icons"><img src="/assets/unreal.png" alt="Unreal Engine"></li>
@@ -86,6 +95,7 @@
             </ul>
         </div>
 
+        <!-- Descrição ferramentas -->
         <div id="tools">
             <h3>Tools and Languages</h3>
             <ul>
@@ -104,10 +114,11 @@
             </ul>
         </div>
 
+        <!-- Descrição habilidades -->
         <div id="skills">
             <h3>Main Skills</h3>
             <ul>
-                <p id="core"><span id="text-highlight"> Core
+                <p id="core"><span id="text-highlight">Core
                         Skills</span></p>
                 <li>Workgroup</li>
                 <li>Project Management</li>
@@ -115,7 +126,7 @@
                 <li>Building projects from templates and upgrading existing projects</li>
             </ul>
             <ul>
-                <p id="code"><span id="text-highlight"> Coding
+                <p id="code"><span id="text-highlight">Coding
                         Skills</span></p>
                 <li>Experienced with Data Structures</li>
                 <li>Pathfinding</li>
@@ -124,7 +135,7 @@
                 <li>Animation handling</li>
             </ul>
             <ul>
-                <p id="illumination"><span id="text-highlight"> Illumination Skills</span></p>
+                <p id="illumination"><span id="text-highlight">Illumination Skills</span></p>
                 <li>Lumen and Baked lighting based scene setup</li>
                 <li>Volumetric and Light probes setup</li>
                 <li>Realistic and Artistic lighting knowledge</li>
@@ -135,11 +146,14 @@
 
         <section id="projects">
             <div class="projects">
+
+                <!-- Projetos profissionais título-->
                 <div class="project-title">
                     <h3>Professional projects</h3>
-                    <p><a href="">Full portfolio</a></p>
                 </div>
                 <div class="project-content">
+
+                    <!-- Projeto profissional 1 -->
                     <div class="project">
                         <video controls="controls" muted="muted" poster="/assets/video1poster.png" height="636px"
                             src="/assets/video1.mp4"></video>
@@ -150,6 +164,8 @@
                                 dolor nemo nam veritatis amet At pariatur fugiat eum totam voluptates!</p>
                         </div>
                     </div>
+
+                    <!-- Projeto profissional 2 -->
                     <div class="project">
                         <video controls="controls" muted="muted" poster="/assets/video2poster.png" height="636px"
                             src="/assets/video2.mp4"></video>
@@ -160,6 +176,8 @@
                                 dolor nemo nam veritatis amet At pariatur fugiat eum totam voluptates!</p>
                         </div>
                     </div>
+
+                    <!-- Projeto profissional 3 -->
                     <div class="project">
                         <video controls="controls" muted="muted" poster="/assets/video1poster.png" height="636px"
                             src="/assets/video1.mp4"></video>
@@ -170,6 +188,8 @@
                                 dolor nemo nam veritatis amet At pariatur fugiat eum totam voluptates!</p>
                         </div>
                     </div>
+
+                    <!-- Projeto profissional 4 -->
                     <div class="project">
                         <video controls="controls" muted="muted" poster="/assets/video2poster.png" height="636px"
                             src="/assets/video2.mp4"></video>
@@ -184,11 +204,14 @@
             </div>
 
             <div class="projects">
+
+                <!-- Projetos pessoais título -->
                 <div class="project-title">
                     <h3>Personal projects</h3>
-                    <p><a href="">Full portfolio</a></p>
                 </div>
                 <div class="project-content">
+
+                    <!-- Projeto pessoal 1 -->
                     <div class="project">
                         <video controls="controls" muted="muted" poster="/assets/video2poster.png" height="636px"
                             src="/assets/video2.mp4"></video>
@@ -199,6 +222,8 @@
                                 dolor nemo nam veritatis amet At pariatur fugiat eum totam voluptates!</p>
                         </div>
                     </div>
+
+                    <!-- Projeto pessoal 2 -->
                     <div class="project">
                         <video controls="controls" muted="muted" poster="/assets/video1poster.png" height="636px"
                             src="/assets/video1.mp4"></video>
@@ -209,6 +234,8 @@
                                 dolor nemo nam veritatis amet At pariatur fugiat eum totam voluptates!</p>
                         </div>
                     </div>
+
+                    <!-- Projeto pessoal 3 -->
                     <div class="project">
                         <video controls="controls" muted="muted" poster="/assets/video2poster.png" height="636px"
                             src="/assets/video2.mp4"></video>
@@ -219,6 +246,8 @@
                                 dolor nemo nam veritatis amet At pariatur fugiat eum totam voluptates!</p>
                         </div>
                     </div>
+
+                    <!-- Projeto pessoal 4 -->
                     <div class="project">
                         <video controls="controls" muted="muted" poster="/assets/video1poster.png" height="636px"
                             src="/assets/video1.mp4"></video>
@@ -237,10 +266,14 @@
     <section id="about">
 
         <div id="about-text">
+
+            <!-- Sobre título e CV -->
             <div id="about-title">
                 <h2>About me</h2>
-                <p><a href="">Resume</a></p>
+                <p><a href="/cv/Willian Metzger - CV en.pdf" target="_blank">Resume</a></p>
             </div>
+
+            <!-- Sobre texto -->
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis
                 condimentum.
                 Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames
@@ -248,6 +281,8 @@
                 turpis egestas.
                 Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut
                 adipiscing.</p>
+
+            <!-- Ícones localização e experiencia -->
             <div id="location-experience">
                 <p>Brazil</p>
                 <p>4yrs of experience</p>
@@ -256,11 +291,16 @@
         <img src="/assets/About-character.png" alt="Willian Metzger picture">
 
         <footer>
+
+            <!-- Footer contatos -->
             <h4>Tell me about your next project!</h4>
             <ul>
-                <li><a href=""><img src="/assets/email.png" alt="E-mail"></a></li>
-                <li><a href=""><img src="/assets/linkedin.png" alt="LinkedIn"></a></li>
-                <li><a href=""><img src="/assets/twitter.png" alt="Twitter"></a></li>
+                <li><a href="mailto:willianmetzger@gmail.com" target="_blank"><img src="/assets/email.png"
+                            alt="E-mail"></a></li>
+                <li><a href="https://www.linkedin.com/in/willian-brasil-metzger-46b9a8170/" target="_blank"><img
+                            src="/assets/linkedin.png" alt="LinkedIn"></a></li>
+                <li><a href="https://twitter.com/Willian_Metzger" target="_blank"><img src="/assets/twitter.png"
+                            alt="Twitter"></a></li>
             </ul>
         </footer>
 
